[package]
name = "pairing"

# Remember to change version string in README.md.
version = "0.14.3"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"

[dependencies]
rand = "0.6"
rand_xorshift = "0.1"
byteorder = "1"
#ff = { version = "0.4", features = ["derive"] }
ff = { git = "https://github.com/boltlabs-inc/ff", branch = "master", features = ["derive"] }

[features]
unstable-features = ["expose-arith"]
expose-arith = []
default = []
