[package]
name = "pairing_bl"

# Remember to change version string in README.md.
version = "0.14.5"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
byteorder = "1"
hex = "0.3.2"
#ff = { version = "0.4", features = ["derive"] }
ff_bl = { git = "https://github.com/boltlabs-inc/ff", branch = "master", features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
unstable-features = ["expose-arith"]
expose-arith = []
default = []

[dev-dependencies]
serde_json = "1.0"
